Fixed the login box spacing. Added !important at the .container padding-left in the header.scss. In order to make the login box move to left have to override the original content style sheet.

--- a/src/features/common/header.scss
+++ b/src/features/common/header.scss
@@ -1,6 +1,3 @@
-.dropdown-menu {
-    padding:0rem 0;
-}
 .color-me{
           color: white !important;
 }
@@ -49,8 +46,8 @@ color:white;
 }
 
 .container {
-    padding: 0px;
     position: fixed;
+    padding-left: 0px !important;
 }
 
 .form-login {
@@ -78,5 +75,10 @@ h4 {
 
 .wrapper {
     padding-top: 10px;
+    text-align: center;
+}
+
+.spacing{
+    justify-content: space-between;
     text-align: center;
 }
